// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Menu should render a Menu with an add option and set the screen reader region to blank 1`] = `
<ul
  aria-activedescendant="terra-select-option-null"
  className="menu"
  role="listbox"
  tabIndex="0"
/>
`;

exports[`Menu should render a Menu with no results and update the live region appropriately 1`] = `
<ul
  aria-activedescendant="terra-select-option-null"
  className="menu"
  role="listbox"
  tabIndex="0"
>
  <NoResults
    key=".0"
    value="asdfasdf"
  />
</ul>
`;

exports[`Menu should render a default Menu 1`] = `
<ul
  aria-activedescendant="terra-select-option-null"
  className="menu"
  role="listbox"
  tabIndex="0"
>
  <NoResults
    key=".0"
  />
</ul>
`;
